# market-prefs

./: pyproject.toml  settings.py
Risk_Elicitation_Task/: all_decision_trees.py
bots/: main.py
bots/bot-data/: experiment.cfg
bots/bot-data/runs/: runs.metadata
