[project]
name = "market-prefs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.57.1",
    "bs4>=0.0.2",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipython>=8.37.0",
    "jinja2>=2.11.3",
    "jsonpickle>=4.1.1",
    "matplotlib>=3.10.3",
    "matplotlib-inline>=0.1.7",
    "mistralai>=1.9.2",
    "numpy>=2.2.6",
    "openai>=1.95.1",
    "otree>=5.11.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "selenium==4.0.0",
    "tiktoken>=0.9.0",
    "webdriver-manager>=4.0.2",
]
